crates/aspectus-server/tests/http_tests/snapshots/http_tests__contract_test__introspect_expired_jwt.snap
---
source: crates/aspectus-server/tests/http_tests/contract_test.rs
assertion_line: 575
expression: body
---
{
  "active": false
}
