crates/aspectus-server/tests/http_tests/snapshots/http_tests__contract_test__introspect_revoked_api_key.snap
---
source: crates/aspectus-server/tests/http_tests/contract_test.rs
assertion_line: 264
expression: body
---
{
  "active": false
}
