crates/aspectus-server/tests/http_tests/snapshots/http_tests__contract_test__introspect_unknown_token.snap
---
source: crates/aspectus-server/tests/http_tests/contract_test.rs
assertion_line: 277
expression: body
---
{
  "active": false
}
